shell and windows .bat scripts added